--- a/copied files/indexx.html
+++ b/copied files/indexx.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header__container container">
         <nav class="nav">
           <a href="" class="logo logo__nav"><span class="logo__accent">Web</span>Studio</a>
@@ -49,14 +49,14 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <main>
-      <!-- <section class="hero
+      <section class="hero
         <div class="container">
           <h1 class="hero__title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button type="button" class="hero__btn" data-modal-open>Заказать услугу</button>
         </div>
-      </section> -->
+      </section>
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
@@ -108,7 +108,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section--padding-bottom">
+      <section class="section--padding-bottom">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="about">
@@ -147,8 +147,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section section--team-background">
+      </section>
+      <section class="section section--team-background">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
@@ -318,8 +318,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section">
+      </section>
+      <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="customers">
@@ -367,9 +367,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-wrap">
         <div class="address-container">
           <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
@@ -510,6 +510,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
-</html>
+</html> -->
