--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-
-
-  
   <body>
     <!-- <header class="header">
       <div class="header__container container">
@@ -111,7 +108,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section--padding-bottom">
+      <section class="section--padding-bottom">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="about">
@@ -150,8 +147,8 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="section section--team-background">
+      </section>
+      <section class="section section--team-background">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
@@ -321,7 +318,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
