--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="customers">
@@ -367,7 +367,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-wrap">
