--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header__container container">
         <nav class="nav">
           <a href="" class="logo logo__nav"><span class="logo__accent">Web</span>Studio</a>
@@ -48,8 +48,9 @@
             >
           </li>
         </ul>
+        <button type="button"></button>
       </div>
-    </header> -->
+    </header>
     <main>
       <!-- <section class="hero
         <div class="container">
