--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-wrap">
         <div class="address-container">
           <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
@@ -302,6 +302,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
