--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </svg>
         </button>
       </div>
-      <div class="tel-menu container">
+      <div class="tel-menu">
         <button type="button" class="menu-close-btn">
           <svg class="" width="40" height="40">
             <use href="./images/icons-svg/symbol-defs.svg#icon-close_40px"></use>
