--- a/index.html
+++ b/index.html
@@ -54,49 +54,57 @@
                 </svg>
         </button>
       </div>
-      <div class="tel-menu">
-        <button type="button" class="menu-close-btn">
-          <svg class="" width="40" height="40">
-            <use href="./images/icons-svg/symbol-defs.svg#icon-close_40px"></use>
-          </svg>
-  </button>
-  <ul class="tel-menu-list">
-    <li class="tel-menu-list__item">
-      <a class="tel-menu-list__link link tel-menu-list__link--current" href="./index.html">Студия</a>
-    </li>
-    <li class="tel-menu-list__item">
-      <a class="tel-menu-list__link link" href="./portfolio.html">Портфолио</a>
-    </li>
-    <li class="tel-menu-list__item">
-      <a class="tel-menu-list__link link" href="">Контакты</a>
-    </li>
-  </ul>
-  <ul class="tel-menu-contacts">
-    <li class="tel-menu-contacts__item">
-      <a class="tel-menu-contacts__link link" href="mailto:info@devstudio.com">
-        info@devstudio.com</a
-      >
-    </li>
-    <li class="tel-menu-contacts__item">
-      <a class="tel-menu-contacts__link link" href="tel:++380961111111">
-        +380961111111</a
-      >
-    </li>
-  </ul>
-  <ul class="tel-menu-socials">
-    <li class="tel-menu-socials__item">
-      <a href="" class="tel-menu-socials__link">Instagram</a>
-    </li>
-    <li class="tel-menu-socials__item">
-      <a href="" class="tel-menu-socials__link">Twitter</a>
-    </li>
-    <li class="tel-menu-socials__item">
-      <a href="" class="tel-menu-socials__link">Facebook</a>
-    </li>
-    <li class="tel-menu-socials__item">
-      <a href="" class="tel-menu-socials__link">LinkedIn</a>
-    </li>
-  </ul>
+      <div class="tel-menu">    
+  <div class="tel-menu-wrap">
+    <div class="tel-menu-top">
+      <button type="button" class="menu-close-btn">
+        <svg class="" width="40" height="40">
+          <use href="./images/icons-svg/symbol-defs.svg#icon-close_40px"></use>
+        </svg>
+    </button>
+      <ul class="tel-menu-list">
+        <li class="tel-menu-list__item">
+          <a class="tel-menu-list__link link tel-menu-list__link--current" href="./index.html">Студия</a>
+        </li>
+        <li class="tel-menu-list__item">
+          <a class="tel-menu-list__link link" href="./portfolio.html">Портфолио</a>
+        </li>
+        <li class="tel-menu-list__item">
+          <a class="tel-menu-list__link link" href="">Контакты</a>
+        </li>
+      </ul>
+    </div>
+    <div class="tel-menu-middle">
+      <ul class="tel-menu-contacts">
+        <li class="tel-menu-contacts__item">
+          <a class="tel-menu-contacts__link tel-menu-contacts__link--selected link" href="tel:++380961111111">
+            +380961111111</a
+          >
+        </li>
+        <li class="tel-menu-contacts__item">
+          <a class="tel-menu-contacts__link link" href="mailto:info@devstudio.com">
+            info@devstudio.com</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="tel-menu-bottom">
+      <ul class="tel-menu-socials">
+        <li class="tel-menu-socials__item">
+          <a href="" class="tel-menu-socials__link">Instagram</a>
+        </li>
+        <li class="tel-menu-socials__item">
+          <a href="" class="tel-menu-socials__link">Twitter</a>
+        </li>
+        <li class="tel-menu-socials__item">
+          <a href="" class="tel-menu-socials__link">Facebook</a>
+        </li>
+        <li class="tel-menu-socials__item">
+          <a href="" class="tel-menu-socials__link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+  </div>
       </div>
     </header>
     <main>
