--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
       <div class="header__container container">
         <nav class="nav">
           <a href="" class="logo logo__nav"><span class="logo__accent">Web</span>Studio</a>
-          <ul class="nav-list">
-            <li class="nav-list__item">
-              <a class="nav-list__link link nav-list__link--current" href="./index.html">Студия</a>
+            <ul class="nav-list">
+              <li class="nav-list__item">
+                <a class="nav-list__link link nav-list__link--current" href="./index.html">Студия</a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link link" href="">Контакты</a>
+              </li>
+            </ul>
+                    </nav>
+                    <ul class="header-contacts">
+            <li class="header-contacts__item">
+              <a class="header-contacts__link link" href="mailto:info@devstudio.com">
+                <svg class="header-contacts__icon" width="16" height="12">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
-            <li class="nav-list__item">
-              <a class="nav-list__link link" href="./portfolio.html">Портфолио</a>
+            <li class="header-contacts__item">
+              <a class="header-contacts__link link" href="tel:++380961111111">
+                <svg class="header-contacts__icon" width="10" height="16">
+                  <use href="./images/icons-svg/symbol-defs.svg#icon-tel"></use>
+                </svg>
+                +380961111111</a
+              >
             </li>
-            <li class="nav-list__item">
-              <a class="nav-list__link link" href="">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="header-contacts">
-          <li class="header-contacts__item">
-            <a class="header-contacts__link link" href="mailto:info@devstudio.com">
-              <svg class="header-contacts__icon" width="16" height="12">
-                <use href="./images/icons-svg/symbol-defs.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="header-contacts__item">
-            <a class="header-contacts__link link" href="tel:++380961111111">
-              <svg class="header-contacts__icon" width="10" height="16">
-                <use href="./images/icons-svg/symbol-defs.svg#icon-tel"></use>
-              </svg>
-              +380961111111</a
-            >
-          </li>
-        </ul>
+                    </ul>
         <button type="button" class="menu-open-btn">
                 <svg class="" width="40" height="40">
                   <use href="./images/icons-svg/symbol-defs.svg#icon-menu_40px"></use>
                 </svg>
         </button>
       </div>
-      <div class="tel-menu">    
+      <div class="tel-menu is-hidden">    
   <div class="tel-menu-wrap">
     <div class="tel-menu-top">
       <button type="button" class="menu-close-btn">
@@ -108,12 +108,12 @@
       </div>
     </header>
     <main>
-      <!-- <section class="hero
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
           <button type="button" class="hero__btn" data-modal-open>Заказать услугу</button>
         </div>
-      </section> -->
+      </section>
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
@@ -568,5 +568,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script> -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
