--- a/index.html
+++ b/index.html
@@ -426,82 +426,88 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-wrap">
-        <div class="address-container">
-          <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
-          <address class="address">
-            <ul class="address__list">
-              <li class="address__item">
-                <a class="address__info link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
-                  >г.Киев,пр-т Леси Украинки,26</a
-                >
+        <div class="address-container-wrap">
+          <div class="address-container">
+            <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
+            <address class="address">
+              <ul class="address__list">
+                <li class="address__item">
+                  <a class="address__info link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
+                    >г.Киев,пр-т Леси Украинки,26</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__mail address__mail--link link" href="mailto:info@example.com"
+                    >info@example.com"</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__tel address__tel--link link" href="tel:+380991111111"
+                    >+380991111111"</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+        <div class="footer-socials-wrap">
+          <div class="footer-socials">
+            <p class="footer-subtitle">присоединяйтесь</p>
+            <ul class="socials">
+              <li class="socials__item">
+                <a href="" class="socials__link socials__link--footer">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__item">
-                <a class="address__mail address__mail--link link" href="mailto:info@example.com"
-                  >info@example.com"</a
-                >
+              <li class="socials__item">
+                <a href="" class="socials__link socials__link--footer">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__item">
-                <a class="address__tel address__tel--link link" href="tel:+380991111111"
-                  >+380991111111"</a
-                >
+              <li class="socials__item">
+                <a href="" class="socials__link socials__link--footer">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a href="" class="socials__link socials__link--footer">
+                  <svg class="socials__icon" width="20" height="20">
+                    <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-        <div class="footer-socials">
-          <p class="footer-subtitle">присоединяйтесь</p>
-          <ul class="socials">
-            <li class="socials__item">
-              <a href="" class="socials__link socials__link--footer">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="" class="socials__link socials__link--footer">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="" class="socials__link socials__link--footer">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="" class="socials__link socials__link--footer">
-                <svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-subscribe">
-          <p class="footer-subtitle">подпишитесь на рассылку</p>
-          <form class="footer-subscribe__wrap">
-            <div class="subscribe-form">
-              <input
-                type="email"
-                name="footer-input"
-                class="subscribe-form__input"
-                placeholder="E-mail"
-                required
-              />
-              <button type="submit" class="subscribe-btn">
-                <span class="subscribe-btn__text">Подписаться</span>
-                <svg class="subscribe-btn__icon" width="24" height="24">
-                  <use href="./images/icons-svg/symbol-defs.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
-          </form>
+        <div class="footer-subscribe-wrap">
+          <div class="footer-subscribe">
+            <p class="footer-subtitle">подпишитесь на рассылку</p>
+            <form class="footer-subscribe__wrap">
+              <div class="subscribe-form">
+                <input
+                  type="email"
+                  name="footer-input"
+                  class="subscribe-form__input"
+                  placeholder="E-mail"
+                  required
+                />
+                <button type="submit" class="subscribe-btn">
+                  <span class="subscribe-btn__text">Подписаться</span>
+                  <svg class="subscribe-btn__icon" width="24" height="24">
+                    <use href="./images/icons-svg/symbol-defs.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -567,7 +573,7 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
 </html>
