--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,63 @@
             >
           </li>
         </ul>
+        <button type="button" class="menu-open-btn">
+          <svg class="" width="40" height="40">
+            <use href="./images/icons-svg/symbol-defs.svg#icon-menu_40px"></use>
+          </svg>
+  </button>
+</div>
+<div class="tel-menu is-hidden">    
+<div class="tel-menu-wrap">
+<div class="tel-menu-top">
+<button type="button" class="menu-close-btn">
+  <svg class="" width="40" height="40">
+    <use href="./images/icons-svg/symbol-defs.svg#icon-close_40px"></use>
+  </svg>
+</button>
+<ul class="tel-menu-list">
+  <li class="tel-menu-list__item">
+    <a class="tel-menu-list__link link tel-menu-list__link--current" href="./index.html">Студия</a>
+  </li>
+  <li class="tel-menu-list__item">
+    <a class="tel-menu-list__link link" href="./portfolio.html">Портфолио</a>
+  </li>
+  <li class="tel-menu-list__item">
+    <a class="tel-menu-list__link link" href="">Контакты</a>
+  </li>
+</ul>
+</div>
+<div class="tel-menu-middle">
+<ul class="tel-menu-contacts">
+  <li class="tel-menu-contacts__item">
+    <a class="tel-menu-contacts__link tel-menu-contacts__link--selected link" href="tel:++380961111111">
+      +380961111111</a
+    >
+  </li>
+  <li class="tel-menu-contacts__item">
+    <a class="tel-menu-contacts__link link" href="mailto:info@devstudio.com">
+      info@devstudio.com</a
+    >
+  </li>
+</ul>
+</div>
+<div class="tel-menu-bottom">
+<ul class="tel-menu-socials">
+  <li class="tel-menu-socials__item">
+    <a href="" class="tel-menu-socials__link">Instagram</a>
+  </li>
+  <li class="tel-menu-socials__item">
+    <a href="" class="tel-menu-socials__link">Twitter</a>
+  </li>
+  <li class="tel-menu-socials__item">
+    <a href="" class="tel-menu-socials__link">Facebook</a>
+  </li>
+  <li class="tel-menu-socials__item">
+    <a href="" class="tel-menu-socials__link">LinkedIn</a>
+  </li>
+</ul>
+</div>
+</div>
       </div>
     </header>
     <main>
@@ -224,7 +281,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-wrap">
         <div class="address-container">
           <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
@@ -302,6 +359,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
