--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,10 @@
 </button>
 <ul class="tel-menu-list">
   <li class="tel-menu-list__item">
-    <a class="tel-menu-list__link link tel-menu-list__link--current" href="./index.html">Студия</a>
+    <a class="tel-menu-list__link link" href="./index.html">Студия</a>
   </li>
   <li class="tel-menu-list__item">
-    <a class="tel-menu-list__link link" href="./portfolio.html">Портфолио</a>
+    <a class="tel-menu-list__link link tel-menu-list__link--current" href="./portfolio.html">Портфолио</a>
   </li>
   <li class="tel-menu-list__item">
     <a class="tel-menu-list__link link" href="">Контакты</a>
@@ -283,28 +283,29 @@
     </main>
     <footer class="footer">
       <div class="container footer-wrap">
-        <div class="address-container">
-          <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
-          <address class="address">
-            <ul class="address__list">
-              <li class="address__item">
-                <a class="address__info link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
-                  >г.Киев,пр-т Леси Украинки,26</a
-                >
-              </li>
-              <li class="address__item">
-                <a class="address__mail address__mail--link link" href="mailto:info@example.com"
-                  >info@example.com"</a
-                >
-              </li>
-              <li class="address__item">
-                <a class="address__tel address__tel--link link" href="tel:+380991111111"
-                  >+380991111111"</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <div class="address-socials-wrap">
+          <div class="address-container">
+            <a href="" class="footer__logo logo"><span class="logo__accent">Web</span>Studio</a>
+            <address class="address">
+              <ul class="address__list">
+                <li class="address__item">
+                  <a class="address__info link" href="https://goo.gl/maps/13D3cSfwj88NWSxH7"
+                    >г.Киев,пр-т Леси Украинки,26</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__mail address__mail--link link" href="mailto:info@example.com"
+                    >info@example.com"</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__tel address__tel--link link" href="tel:+380991111111"
+                    >+380991111111"</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
         <div class="footer-socials">
           <p class="footer-subtitle">присоединяйтесь</p>
           <ul class="socials">
@@ -338,6 +339,7 @@
             </li>
           </ul>
         </div>
+         </div>
         <div class="footer-subscribe">
           <p class="footer-subtitle">подпишитесь на рассылку</p>
           <form class="footer-subscribe__wrap">
@@ -360,5 +362,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
