--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <ul class="about">
             <li class="about__item">
               <img
-                src="./images/студия/img1.jpg"
+                src="./images/студия/desk/about-item-1-desk.jpg"
                 alt="person tiping on keyboard"
                 width="370"
                 height="294"
@@ -182,7 +182,7 @@
             </li>
             <li class="about__item">
               <img
-                src="./images/студия/img2.jpg"
+                src="./images/студия/desk/about-item-2-desk.jpg"
                 alt="person taking phone in left hand and typing by another hand"
                 width="370"
                 height="294"
@@ -193,7 +193,7 @@
             </li>
             <li class="about__item">
               <img
-                src="./images/студия/img3.jpg"
+                src="./images/студия/desk/about-item-3-desk.jpg"
                 alt="person painting some picture on ipad"
                 width="370"
                 height="294"
@@ -211,7 +211,7 @@
           <ul class="team">
             <li class="team__item">
               <img
-                src="./images/студия/ИгорьДемьяненко.jpg"
+                src="./images/студия/desk/team-item-1-desk.jpg"
                 alt="Игорь Демьяненко Product Designer"
                 width="270"
               />
@@ -252,7 +252,7 @@
             </li>
             <li class="team__item">
               <img
-                src="./images/студия/ОльгаРепина.jpg"
+                src="./images/студия/desk/team-item-2-desk.jpg"
                 alt="Ольга Репина Frontend Developer"
                 width="270"
               />
@@ -293,7 +293,7 @@
             </li>
             <li class="team__item">
               <img
-                src="./images/студия/НиколайТарасов.jpg"
+                src="./images/студия/desk/team-item-3-desk.jpg"
                 alt="Николай Тарасов Marketing"
                 width="270"
               />
@@ -334,7 +334,7 @@
             </li>
             <li class="team__item">
               <img
-                src="./images/студия/МихаилЕрмаков.jpg"
+                src="./images/студия/desk/team-item-4-desk.jpg"
                 alt="Михаил Ермаков UI Designer"
                 width="270"
               />
