--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img1.jpg" alt="Технокряк" width="370" />
+                  <img src="./images/портфолио/desk/project-card-1-desk.jpg" alt="Технокряк" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -141,7 +141,7 @@
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
                   <img
-                    src="./images/портфолио/img2.jpg"
+                    src="./images/портфолио/desk/project-card-2-desk.jpg"
                     alt="Постер New Orlean vs Golden Star"
                     width="370"
                   />
@@ -160,7 +160,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img3.jpg" alt="Ресторан Seafood" width="370" />
+                  <img src="./images/портфолио/desk/project-card-3-desk.jpg" alt="Ресторан Seafood" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -176,7 +176,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img4.jpg" alt="Проект Prime" width="370" />
+                  <img src="./images/портфолио/desk/project-card-4-desk.jpg" alt="Проект Prime" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -192,7 +192,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img5.jpg" alt="Проект Boxes" width="370" />
+                  <img src="./images/портфолио/desk/project-card-5-desk.jpg" alt="Проект Boxes" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -209,7 +209,7 @@
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
                   <img
-                    src="./images/портфолио/img6.jpg"
+                    src="./images/портфолио/desk/project-card-6-desk.jpg"
                     alt="Inspiration has no Borders"
                     width="370"
                   />
@@ -229,7 +229,7 @@
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
                   <img
-                    src="./images/портфолио/img7.jpg"
+                    src="./images/портфолио/desk/project-card-7-desk.jpg"
                     alt="Издание Limited Edition"
                     width="370"
                   />
@@ -248,7 +248,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img8.jpg" alt="Проект LAB" width="370" />
+                  <img src="./images/портфолио/desk/project-card-8-desk.jpg" alt="Проект LAB" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -264,7 +264,7 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/img9.jpg" alt="Growing Business" width="370" />
+                  <img src="./images/портфолио/desk/project-card-9-desk.jpg" alt="Growing Business" width="370" />
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
