--- a/index.html
+++ b/index.html
@@ -170,34 +170,46 @@
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="about">
             <li class="about__item">
+              <picture>
+                <source srcset="./images/студия/desk/about-item-1-desk.jpg 1x,
+                 ./images/студия/desk/about-item-1-desk-2x.jpg 2x"
+                 media="(min-width: 1200px)"
+                 />
               <img
                 src="./images/студия/desk/about-item-1-desk.jpg"
                 alt="person tiping on keyboard"
-                width="370"
-                height="294"
               />
+            </picture>
               <div class="about__label">
                 <p class="about__text">десктопные приложения</p>
               </div>
             </li>
             <li class="about__item">
+              <picture>
+                <source srcset="./images/студия/desk/about-item-2-desk.jpg 1x,
+                ./images/студия/desk/about-item-2-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
               <img
                 src="./images/студия/desk/about-item-2-desk.jpg"
                 alt="person taking phone in left hand and typing by another hand"
-                width="370"
-                height="294"
               />
+            </picture>
               <div class="about__label">
                 <p class="about__text">мобильные приложения</p>
               </div>
             </li>
             <li class="about__item">
+              <picture>
+                <source srcset="./images/студия/desk/about-item-3-desk.jpg 1x,
+                ./images/студия/desk/about-item-3-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
               <img
                 src="./images/студия/desk/about-item-3-desk.jpg"
                 alt="person painting some picture on ipad"
-                width="370"
-                height="294"
               />
+            </picture>
               <div class="about__label">
                 <p class="about__text">дизайнерские решения</p>
               </div>
