--- a/index.html
+++ b/index.html
@@ -222,11 +222,19 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
+              <picutre>
+                <source srcset="./images/студия/desk/team-item-1-desk.jpg 1x,
+                ./images/студия/desk/team-item-1-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
+                <source srcset="./images/студия/
+                "
               <img
                 src="./images/студия/desk/team-item-1-desk.jpg"
                 alt="Игорь Демьяненко Product Designer"
                 width="270"
               />
+            </picutre>
               <div class="team__content">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p class="team__text">Product Designer</p>
