--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,22 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-1-desk.jpg" alt="Технокряк" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-1-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-1-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-1-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-1-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-1-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-1-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-1-desk.jpg"
+                     alt="Технокряк" />
+                </picture>    
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -140,11 +155,25 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-2-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-2-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-2-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-2-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-1-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-1-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img
                     src="./images/портфолио/desk/project-card-2-desk.jpg"
                     alt="Постер New Orlean vs Golden Star"
-                    width="370"
                   />
+                </picture>    
+                  
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -160,7 +189,22 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-3-desk.jpg" alt="Ресторан Seafood" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-3-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-3-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-3-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-3-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-3-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-3-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-3-desk.jpg"
+                     alt="Ресторан Seafood" />
+                </picture>    
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -176,7 +220,22 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-4-desk.jpg" alt="Проект Prime" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-4-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-4-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-4-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-4-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-4-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-4-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-4-desk.jpg"
+                     alt="Проект Prime" />
+                </picture>     
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -192,7 +251,21 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-5-desk.jpg" alt="Проект Boxes" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-5-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-5-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-5-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-5-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-5-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-5-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-5-desk.jpg" alt="Проект Boxes" />
+                </picture>     
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -208,11 +281,24 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-6-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-6-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-6-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-6-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-6-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-6-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img
                     src="./images/портфолио/desk/project-card-6-desk.jpg"
                     alt="Inspiration has no Borders"
-                    width="370"
                   />
+                </picture>     
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -228,11 +314,24 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-7-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-7-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-7-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-7-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-7-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-7-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img
                     src="./images/портфолио/desk/project-card-7-desk.jpg"
                     alt="Издание Limited Edition"
-                    width="370"
                   />
+                </picture>     
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -248,7 +347,22 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-8-desk.jpg" alt="Проект LAB" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-8-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-8-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-8-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-8-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-8-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-8-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-8-desk.jpg"
+                     alt="Проект LAB" />
+                </picture>     
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -264,7 +378,22 @@
             <li class="project-card">
               <a class="project-card__link" href="">
                 <div class="project-card__wrap">
-                  <img src="./images/портфолио/desk/project-card-9-desk.jpg" alt="Growing Business" width="370" />
+                  <picture>
+                    <source srcset="./images/портфолио/desk/project-card-9-desk.jpg 1x, 
+                    ./images/портфолио/desk/project-card-9-desk-2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                    />
+                    <source srcset="./images/портфолио/tab/project-card-9-tab.jpg 1x, 
+                    ./images/портфолио/tab/project-card-9-tab-2x.jpg 2x"
+                    media="(min-width: 768px)"
+                    />
+                    <source srcset="./images/портфолио/tel/project-card-9-tel.jpg 1x, 
+                    ./images/портфолио/tel/project-card-9-tel-2x.jpg 2x"
+                    media="(min-width: 480px)"
+                    />
+                    <img src="./images/портфолио/desk/project-card-9-desk.jpg" 
+                    alt="Growing Business" />
+                </picture>    
                   <p class="project-card__overlay">
                     Технокряк - это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
