--- a/index.html
+++ b/index.html
@@ -222,19 +222,25 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team">
             <li class="team__item">
-              <picutre>
+              <picture>
                 <source srcset="./images/студия/desk/team-item-1-desk.jpg 1x,
                 ./images/студия/desk/team-item-1-desk-2x.jpg 2x"
                 media="(min-width: 1200px)"
                 />
-                <source srcset="./images/студия/
+                <source srcset="./images/студия/tab/team-item-1-tab.jpg 1x, 
+                ./images/студия/tab/team-item-1-tab-2x.jpg 2x
                 "
+                media="(min-width: 768px)"
+                />
+                <source srcset="./images/студия/tel/team-item-1-tel.jpg 1x,
+                ./images/студия/tel/team-item-1-tel-2x.jpg 2x"
+                media="(min-width: 480px"
+                />
               <img
                 src="./images/студия/desk/team-item-1-desk.jpg"
                 alt="Игорь Демьяненко Product Designer"
-                width="270"
               />
-            </picutre>
+            </picture>
               <div class="team__content">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p class="team__text">Product Designer</p>
@@ -271,11 +277,24 @@
               </div>
             </li>
             <li class="team__item">
+              <picture>
+                <source srcset="./images/студия/desk/team-item-2-desk.jpg 1x, 
+                ./images/студия/desk/team-item-2-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
+                <source srcset="./images/студия/tab/team-item-2-tab.jpg 1x, 
+                ./images/студия/tab/team-item-2-tab-2x.jpg 2x"
+                media="(min-width: 768px)"
+                />
+                <source srcset="./images/студия/tel/team-item-2-tel.jpg 1x, 
+                ./images/студия/tel/team-item-2-tel-2x.jpg 2x"
+                media="(min-width: 480px)"
+                />
               <img
                 src="./images/студия/desk/team-item-2-desk.jpg"
                 alt="Ольга Репина Frontend Developer"
-                width="270"
               />
+            </picture>
               <div class="team__content">
                 <h3 class="team__title">Ольга Репина</h3>
                 <p class="team__text">Frontend Developer</p>
@@ -312,11 +331,24 @@
               </div>
             </li>
             <li class="team__item">
-              <img
+              <picture>
+                <source srcset="./images/студия/desk/team-item-3-desk.jpg 1x, 
+                ./images/студия/desk/team-item-3-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
+                <source srcset="./images/студия/tab/team-item-3-tab.jpg 1x, 
+                ./images/студия/tab/team-item-3-tab-2x.jpg 2x"
+                media="(min-width: 768px)"
+                />
+                <source srcset="./images/студия/tel/team-item-3-tel.jpg 1x, 
+                ./images/студия/tel/team-item-3-tel-2x.jpg 2x"
+                media="(min-width: 480px)"
+                />
+                <img
                 src="./images/студия/desk/team-item-3-desk.jpg"
                 alt="Николай Тарасов Marketing"
-                width="270"
               />
+            </picture>         
               <div class="team__content">
                 <h3 class="team__title">Николай Тарасов</h3>
                 <p class="team__text">Marketing</p>
@@ -353,11 +385,24 @@
               </div>
             </li>
             <li class="team__item">
-              <img
+              <picture>
+                <source srcset="./images/студия/desk/team-item-4-desk.jpg 1x, 
+                ./images/студия/desk/team-item-4-desk-2x.jpg 2x"
+                media="(min-width: 1200px)"
+                />
+                <source srcset="./images/студия/tab/team-item-4-tab.jpg 1x, 
+                ./images/студия/tab/team-item-4-tab-2x.jpg 2x"
+                media="(min-width: 768px)"
+                />
+                <source srcset="./images/студия/tel/team-item-4-tel.jpg 1x, 
+                ./images/студия/tel/team-item-4-tel-2x.jpg 2x"
+                media="(min-width: 480px)"
+                />
+                <img
                 src="./images/студия/desk/team-item-4-desk.jpg"
                 alt="Михаил Ермаков UI Designer"
-                width="270"
               />
+            </picture>         
               <div class="team__content">
                 <h3 class="team__title">Михаил Ермаков</h3>
                 <p class="team__text">UI Designer</p>
