--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 />
                 <source srcset="./images/студия/tel/team-item-1-tel.jpg 1x,
                 ./images/студия/tel/team-item-1-tel-2x.jpg 2x"
-                media="(min-width: 480px"
+                media="(min-width: 480px)"
                 />
               <img
                 src="./images/студия/desk/team-item-1-desk.jpg"
