corrections are made

--- a/index.html
+++ b/index.html
@@ -74,35 +74,37 @@
         </li>
       </ul>
     </div>
-    <div class="tel-menu-middle">
-      <ul class="tel-menu-contacts">
-        <li class="tel-menu-contacts__item">
-          <a class="tel-menu-contacts__link tel-menu-contacts__link--selected link" href="tel:++380961111111">
-            +380961111111</a
-          >
-        </li>
-        <li class="tel-menu-contacts__item">
-          <a class="tel-menu-contacts__link link" href="mailto:info@devstudio.com">
-            info@devstudio.com</a
-          >
-        </li>
-      </ul>
-    </div>
-    <div class="tel-menu-bottom">
-      <ul class="tel-menu-socials">
-        <li class="tel-menu-socials__item">
-          <a href="" class="tel-menu-socials__link">Instagram</a>
-        </li>
-        <li class="tel-menu-socials__item">
-          <a href="" class="tel-menu-socials__link">Twitter</a>
-        </li>
-        <li class="tel-menu-socials__item">
-          <a href="" class="tel-menu-socials__link">Facebook</a>
-        </li>
-        <li class="tel-menu-socials__item">
-          <a href="" class="tel-menu-socials__link">LinkedIn</a>
-        </li>
-      </ul>
+    <div class="tel-menu-container">
+      <div class="tel-menu-middle">
+        <ul class="tel-menu-contacts">
+          <li class="tel-menu-contacts__item">
+            <a class="tel-menu-contacts__link tel-menu-contacts__link--selected link" href="tel:++380961111111">
+              +380961111111</a
+            >
+          </li>
+          <li class="tel-menu-contacts__item">
+            <a class="tel-menu-contacts__link link" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="tel-menu-bottom">
+        <ul class="tel-menu-socials">
+          <li class="tel-menu-socials__item">
+            <a href="" class="tel-menu-socials__link">Instagram</a>
+          </li>
+          <li class="tel-menu-socials__item">
+            <a href="" class="tel-menu-socials__link">Twitter</a>
+          </li>
+          <li class="tel-menu-socials__item">
+            <a href="" class="tel-menu-socials__link">Facebook</a>
+          </li>
+          <li class="tel-menu-socials__item">
+            <a href="" class="tel-menu-socials__link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
       </div>
@@ -234,7 +236,7 @@
                 />
                 <source srcset="./images/студия/tel/team-item-1-tel.jpg 1x,
                 ./images/студия/tel/team-item-1-tel-2x.jpg 2x"
-                media="(min-width: 480px)"
+                media="(max-width: 767px)"
                 />
               <img
                 src="./images/студия/desk/team-item-1-desk.jpg"
@@ -288,7 +290,7 @@
                 />
                 <source srcset="./images/студия/tel/team-item-2-tel.jpg 1x, 
                 ./images/студия/tel/team-item-2-tel-2x.jpg 2x"
-                media="(min-width: 480px)"
+                media="(max-width: 767px)"
                 />
               <img
                 src="./images/студия/desk/team-item-2-desk.jpg"
@@ -342,7 +344,7 @@
                 />
                 <source srcset="./images/студия/tel/team-item-3-tel.jpg 1x, 
                 ./images/студия/tel/team-item-3-tel-2x.jpg 2x"
-                media="(min-width: 480px)"
+                media="(max-width: 767px)"
                 />
                 <img
                 src="./images/студия/desk/team-item-3-desk.jpg"
@@ -396,7 +398,7 @@
                 />
                 <source srcset="./images/студия/tel/team-item-4-tel.jpg 1x, 
                 ./images/студия/tel/team-item-4-tel-2x.jpg 2x"
-                media="(min-width: 480px)"
+                media="(max-width: 767px)"
                 />
                 <img
                 src="./images/студия/desk/team-item-4-desk.jpg"
