--- a/portfolio.html
+++ b/portfolio.html
@@ -114,11 +114,21 @@
         <div class="container">
           <h1 class="visually-hidden">Примеры работ</h1>
           <ul class="filter">
-            <li><button type="button" class="filter__button">Все</button></li>
-            <li><button type="button" class="filter__button">Веб-сайты</button></li>
-            <li><button type="button" class="filter__button">Приложения</button></li>
-            <li><button type="button" class="filter__button">Дизайн</button></li>
-            <li><button type="button" class="filter__button">Маркетинг</button></li>
+            <li class="filter__item">
+              <button type="button" class="filter__item-button">Все</button>
+            </li>
+            <li class="filter__item">
+              <button type="button" class="filter__item-button">Веб-сайты</button>
+            </li>
+            <li class="filter__item">
+              <button type="button" class="filter__item-button">Приложения</button>
+            </li>
+            <li class="filter__item">
+              <button type="button" class="filter__item-button">Дизайн</button>
+            </li>
+            <li class="filter__item">
+               <button type="button" class="filter__item-button">Маркетинг</button>
+              </li>
           </ul>
           <ul class="projects">
             <li class="project-card">
@@ -135,7 +145,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-1-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-1-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-1-desk.jpg"
                      alt="Технокряк" />
@@ -166,7 +176,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-2-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-2-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img
                     src="./images/портфолио/desk/project-card-2-desk.jpg"
@@ -200,7 +210,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-3-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-3-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-3-desk.jpg"
                      alt="Ресторан Seafood" />
@@ -231,7 +241,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-4-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-4-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-4-desk.jpg"
                      alt="Проект Prime" />
@@ -262,7 +272,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-5-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-5-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-5-desk.jpg" alt="Проект Boxes" />
                 </picture>     
@@ -292,7 +302,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-6-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-6-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img
                     src="./images/портфолио/desk/project-card-6-desk.jpg"
@@ -325,7 +335,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-7-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-7-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img
                     src="./images/портфолио/desk/project-card-7-desk.jpg"
@@ -358,7 +368,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-8-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-8-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-8-desk.jpg"
                      alt="Проект LAB" />
@@ -389,7 +399,7 @@
                     />
                     <source srcset="./images/портфолио/tel/project-card-9-tel.jpg 1x, 
                     ./images/портфолио/tel/project-card-9-tel-2x.jpg 2x"
-                    media="(min-width: 480px)"
+                    media="(max-width: 767px)"
                     />
                     <img src="./images/портфолио/desk/project-card-9-desk.jpg" 
                     alt="Growing Business" />
